# rhel-ai-toolkit

./: .gitlab-ci.yml  Dockerfile  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
src/rhel_ai_toolkit/: cli.py
src/rhel_ai_toolkit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_basic.py
