[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rhel-ai-toolkit"
version = "0.1.0"
description = " A small Python CLI toolkit for system introspection"
authors = [
    { name = "Safia Wajeed"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "click"
]

[project.scripts]
rhel-ai = "rhel_ai_toolkit.cli:cli"